// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavigationMenu > mounts 1`] = `
"<nav data-v-fe35c617="" class="navigation-menu">
  <ul data-v-fe35c617="" class="navigation-menu__link-container">
    <li data-v-fe35c617=""><a data-v-fe35c617="" href="/" class="navigation-menu__link">Home</a></li>
    <li data-v-fe35c617=""><a data-v-fe35c617="" href="/search" class="navigation-menu__link">Search</a></li>
    <li data-v-fe35c617=""><a data-v-fe35c617="" href="/instructions" class="navigation-menu__link relative">Guide
        <!--v-if-->
      </a></li>
    <li data-v-fe35c617=""><a data-v-7747040a="" data-v-fe35c617="" href="#" role="button" class="navigation-menu__link navigation-menu__locale-changer gap-1" aria-label="Change language to fi"><svg data-v-7747040a="" viewBox="0 0 24 24" aria-hidden="true" class="w-5 h-5">
          <path d="M17.9,17.39C17.64,16.59 16.89,16 16,16H15V13A1,1 0 0,0 14,12H8V10H10A1,1 0 0,0 11,9V7H13A2,2 0 0,0 15,5V4.59C17.93,5.77 20,8.64 20,12C20,14.08 19.2,15.97 17.9,17.39M11,19.93C7.05,19.44 4,16.08 4,12C4,11.38 4.08,10.78 4.21,10.21L9,15V16A2,2 0 0,0 11,18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" class="transition-all"></path>
        </svg> en</a></li>
  </ul>
</nav>"
`;

exports[`NavigationMenu > shows selection size 1`] = `
"<nav data-v-fe35c617="" class="navigation-menu">
  <ul data-v-fe35c617="" class="navigation-menu__link-container">
    <li data-v-fe35c617=""><a data-v-fe35c617="" href="/" class="navigation-menu__link">Home</a></li>
    <li data-v-fe35c617=""><a data-v-fe35c617="" href="/search" class="navigation-menu__link">Search</a></li>
    <li data-v-fe35c617=""><a data-v-fe35c617="" href="/instructions" class="navigation-menu__link relative">Guide <div data-v-fe35c617="" class="navigation-menu__selection-size">1</div></a></li>
    <li data-v-fe35c617=""><a data-v-7747040a="" data-v-fe35c617="" href="#" role="button" class="navigation-menu__link navigation-menu__locale-changer gap-1" aria-label="Change language to fi"><svg data-v-7747040a="" viewBox="0 0 24 24" aria-hidden="true" class="w-5 h-5">
          <path d="M17.9,17.39C17.64,16.59 16.89,16 16,16H15V13A1,1 0 0,0 14,12H8V10H10A1,1 0 0,0 11,9V7H13A2,2 0 0,0 15,5V4.59C17.93,5.77 20,8.64 20,12C20,14.08 19.2,15.97 17.9,17.39M11,19.93C7.05,19.44 4,16.08 4,12C4,11.38 4.08,10.78 4.21,10.21L9,15V16A2,2 0 0,0 11,18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" class="transition-all"></path>
        </svg> en</a></li>
  </ul>
</nav>"
`;
